TestSuite/PascalABCTests/errors/err0436.pas
//!Операция не применима к операндам данного типа
begin
  (^real as uint64);
end.